re PR c++/63628 ([c++1y] cannot use decltype on captured arg-pack)

PR c++/63628
	* pt.c (tsubst_pack_expansion): Also make dummy decls if
	retrieve_local_specialization fails.

From-SVN: r231715